fix: fixed page overscrolling on mobile devices

--- a/apps/playground/src/app/components/Root.module.scss
+++ b/apps/playground/src/app/components/Root.module.scss
@@ -1,7 +1,5 @@
 .root {
   display: flex;
-  width: 100vw;
-  height: 100vh;
 
   &__overlay {
     flex: 1;
