--- a/apps/playground/src/features/styles.module.scss
+++ b/apps/playground/src/features/styles.module.scss
@@ -1,6 +1,5 @@
 .fixed-container {
   width: 100svw;
   height: 100svh;
-  position: fixed;
   overflow: hidden;
 }
